--- a/shop.html
+++ b/shop.html
@@ -34,7 +34,7 @@
             </div>
         </section>
 
-        <section id="shop-header">
+        <section id="page-header">
             <h2>Great value deals</h2>
             <p>Save more with coupons and up tp 80% discount!</p>
         </section>
