--- a/about.html
+++ b/about.html
@@ -5,13 +5,152 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Tech2etc Ecommerce Tutorial</title>
+        <title>The Mama | About</title>
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
 
         <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
+
+                 
+        <section id="header">
+            <a href="#"><img src="./img/logo.png" alt="The Mama" class="logo"></a>
+
+            <div>
+                    <ul id="navbar">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="shop.html">Shop</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a class="active" href="about.html">About</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li id="lg-bag"><a href="cart.html"><i class="fa fa-shopping-bag" aria-hidden="true"></i></a></li>
+                        <a href="#" id="close"><i class="far fa-times"></i></a>
+                    </ul>
+            </div>
+            <div id="mobile">
+                <a href="cart.html"><i class="fa fa-shopping-bag" aria-hidden="true"></i></a>
+                <i id="bar" class="fas fa-outdent"></i>
+            </div>
+        </section>
+
+        <section id="page-header" class="about-header">
+            <h2>#KnowUS</h2>
+            <p>Get to know more about us and and our mission</p>
+        </section>
+
+       <section id="about-head" class="section-p1">
+            <img src="img/about/a6.jpg" alt="">
+            <div>
+                <h2>Who We Are?</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aliquid ipsa perferendis neque harum odio nulla doloribus vel nesciunt eveniet illum voluptatem, cupiditate obcaecati. Illo ex delectus quidem obcaecati deserunt fuga quod nesciunt corrupti laudantium, quis eum labore ducimus nam ut amet accusamus tempore enim repellendus. Accusantium tenetur ut laudantium!</p>
+                <abbr title="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos delectus, impedit molestiae quos deserunt dolorum.</abbr>
+
+                <br><br>
+                <marquee bgcolor="#ccc" loop="-1" scrollamount="5" width="100%">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil error at iure minus voluptatum quas voluptates nobis aliquid molestias maxime!</marquee>
+            </div>
+       </section>
+
+       <section id="about-app" class="section-p1">
+        <h1>Download Our <a href="#">App</a></h1>
+        <div class="video">
+            <video autoplay muted loop src="img/about/1.mp4"></video>
+        </div>
+       </section>
+
+        <section id="services" class="section-p1">
+        <div class="fe-box">
+            <img src="img/features/f1.png" alt="">
+            <h6>Free Shipping</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f2.png" alt="">
+            <h6>Online Order</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f3.png" alt="">
+            <h6>Save Money</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f4.png" alt="">
+            <h6>Promotions</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f5.png" alt="">
+            <h6>Happly Sell</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f6.png" alt="">
+            <h6>24/7 Support</h6>
+        </div>
+
+        </section>
+
+        <section id="newsletter" class="section-p1 section-m1">
+            <div class="newstext">
+                <h4>Sign Up For Newsletters</h4>
+                <p>Get E-mail updates about our latest shop and <span>special offers.</span></p>
+            </div>
+            <div class="form">
+                <input type="text" placeholder="Your email address">
+                <button class="normal">Sign Up</button>
+            </div>
+        </section>
+
+        <footer class="section-p1">
+            <div class="col">
+                <img class="logo" src="img/logo.png" alt="">
+                <p><strong>Address:</strong> 6 Bono Lane, Tema, Greater Accra</p>
+                <p><strong>Phone:</strong> +233 54 235 6778/ +233 20 323 7315</p>
+                <p><strong>Hours:</strong> 10: 00 - 18:00, Mon - Sat</p>
+                
+                <div class="follow">
+                    <h4>Follow Us</h4>
+                    <div class="icon">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-pinterest-p"></i>
+                        <i class="fab fa-youtube"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <h4>About</h4>
+                <a href="#">About Us</a>
+                <a href="#">Delivery Information</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Terms & Condition</a>
+                <a href="#">Contact Us</a>
+            </div>
+            <div class="col">
+                <h4>My Account</h4>
+                <a href="#">Sign In</a>
+                <a href="#">View Cart</a>
+                <a href="#">My Wishlist</a>
+                <a href="#">Track My Order</a>
+                <a href="#">Help</a>
+            </div>
+
+            <div class="col install">
+                <h4>Install App</h4>
+                <p>From App Store or Google Play</p>
+                <div class="row">
+                    <img src="img/pay/app.jpg" alt="">
+                    <img src="img/pay/play.jpg" alt="">
+                </div>
+                <p>Secured Payment Gatways</p>
+                <img src="img/pay/pay.png" alt="">
+            </div>
+
+            <div class="copyright">
+                <p>© 2023, theMama Ecommerce</p>
+            </div>
+        </footer>
+
+
+
 
         <script src="script.js"></script>
     </body>
