--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
         <section id="contact-details" class="section-p1">
             <div class="details">
                 <Span>GET IN TOUCH</Span>
-                <h2>Visit one of our agency locations or contact ss today</h2>
+                <h2>Visit one of our agency locations or contact us today</h2>
                 <h3>Head Office</h3>
                 <div>
                     <li>
