adding fakestore API and UIs modifications

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+        <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     </head>
 
     <body>
@@ -73,8 +74,8 @@
         <section id="product1" class="section-p1">
             <h2>Featured Products</h2>
             <p>Classic Collection New Morden Design</p>
-            <div class="pro-container">
-                <div class="pro">
+            <div id="pro-container" class="pro-container">
+                <!-- <div class="pro">
                     <img src="img/products/f1.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
@@ -193,7 +194,7 @@
                         <h4>GHc 25</h4>
                     </div>
                     <a href="#"> <i class="fal fa-shopping-cart cart"></i></a>
-                </div>
+                </div> -->
             </div>
             
         </section>
@@ -208,8 +209,8 @@
         <section id="product1" class="section-p1">
             <h2>New Arravals</h2>
             <p>Classic Collection New Morden Design</p>
-            <div class="pro-container">
-                <div class="pro">
+            <div id="pro-container2" class="pro-container">
+                <!-- <div class="pro">
                     <img src="img/products/n1.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
@@ -328,7 +329,7 @@
                         <h4>GHc 25</h4>
                     </div>
                     <a href="#"> <i class="fal fa-shopping-cart cart"></i></a>
-                </div>
+                </div> -->
             </div>
             
         </section>
