--- a/detailedproduct.html
+++ b/detailedproduct.html
@@ -20,11 +20,11 @@
             <div>
                     <ul id="navbar">
                         <li><a href="index.html">Home</a></li>
-                        <li><a class="active" href="shop.html">Shop</a></li>
+                        <li><a href="shop.html">Shop</a></li>
                         <li><a href="blog.html">Blog</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
-                        <li id="lg-bag"><a href="cart.html"><i class="fa fa-shopping-bag" aria-hidden="true"></i></a></li>
+                        <li id="lg-bag"><a href="cart.html" class="active"><i class="fa fa-shopping-bag" aria-hidden="true"></i></a></li>
                         <a href="#" id="close"><i class="far fa-times"></i></a>
                     </ul>
             </div>
@@ -74,8 +74,8 @@
         <section id="product1" class="section-p1">
             <h2>Featured Products</h2>
             <p>Classic Collection New Morden Design</p>
-            <div class="pro-container">
-                <div class="pro">
+            <div id="pro-container" class="pro-container">
+                <!-- <div class="pro">
                     <img src="img/products/n5.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
@@ -134,7 +134,7 @@
                         <h4>GHc 25</h4>
                     </div>
                     <a href="#"> <i class="fal fa-shopping-cart cart"></i></a>
-                </div>
+                </div> -->
             </div>
             
         </section>
