--- a/shop.html
+++ b/shop.html
@@ -40,6 +40,12 @@
         </section>
 
         <section id="product1" class="section-p1">
+            <div id="pro-container" class="pro-container" onclick="window.location.href='detailedproduct.html' ">
+
+            </div>
+        </section>
+
+       <!--  <section id="product1" class="section-p1">
             <div class="pro-container" onclick="window.location.href='detailedproduct.html' ">
                 <div class="pro">
                     <img src="img/products/f1.jpg" alt="">
@@ -161,7 +167,6 @@
                     </div>
                     <a href="#"> <i class="fal fa-shopping-cart cart"></i></a>
                 </div>
-            <div class="pro-container">
                 <div class="pro">
                     <img src="img/products/n1.jpg" alt="">
                     <div class="des">
@@ -282,8 +287,8 @@
                     </div>
                     <a href="#"> <i class="fal fa-shopping-cart cart"></i></a>
                 </div>
-            </div>
-        </section>
+        </div>
+        </section> -->
 
         <section id="pagination" class="section-p1">
             <a href="#">1</a>
